src/test/ui/rfc1598-generic-associated-types/iterable.stderr
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:18:47
   |
18 |     type Iter<'a>: Iterator<Item = Self::Item<'a>>;
   |                                               ^^ lifetime parameter not allowed on this type

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/iterable.rs:21:41
   |
21 |     fn iter<'a>(&'a self) -> Self::Iter<'a>;
   |                                         ^^ lifetime parameter not allowed on this type

error: aborting due to 2 previous errors

